Amending summary report generation + process mining log after previous logic break